# logic-gate-sim

./: CMakeLists.txt  Makefile  README.md  _build_gate.cpp  build_gate.cpp  compute.cpp  compute.hpp  file_api.py  file_parser.cpp  parser.py  preformance.py  sim.cpp  test_file_logic.py  test_logic.py  web.py
.github/workflows/: main.yml
contrib/: install.sh
testcase/: test_c17_ans32.txt
